# robotics-project

first_project/: CMakeLists.txt  README.md  package.xml
first_project/cfg/: LidarFrameConfig.cfg  config.cfg  my_rviz_config.rviz
first_project/launch/: launch.launch
first_project/robotics-project/: COMMIT_EDITMSG  config  index
first_project/robotics-project/logs/: HEAD
first_project/robotics-project/logs/refs/remotes/origin/: main
first_project/robotics-project/refs/heads/: main
first_project/src/: gps_to_odom.cpp  lidar_remap.cpp  odom_to_tf.cpp
second_project/: CMakeLists.txt  goalpose_client.cpp  package.xml
second_project/config/: costmap_common.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap.yaml  move_base.yaml  waypoints.csv
second_project/launch/: task1.launch  task2.launch
second_project/map/: map.pgm  map.world  scoutmini.inc
second_project/rviz/: rviz_config.rviz
second_project/src/: odom_to_tf2.cpp
